# package-template

./: .gitignore  cookiecutter.json
{{cookiecutter.project_name}}/: CHANGELOG.md  Makefile  README.md  pyproject.toml
